ractive knows the width of the window now and can decide to show the charts on the dashboard now. don't need the stylesheet to shut it off (this prevents the graphs from running and hosing the mobile phone when it isn't visible)

--- a/clients/www/css/styles.css
+++ b/clients/www/css/styles.css
@@ -1187,10 +1187,6 @@ h4.bid {
     margin-top: 0px !important;
 }
 
-    .dashboard-contracts {
-        display: none;
-    }
-
 .login-box {
     clear: both;
     float: left;
